[tool]
[tool.pdm]
[tool.pdm.scripts]
build = "pyinstaller --onefile --exclude-module _bootlocale --add-data 'english_dic.zip:.' wordgrid.py"
clean = "rm -rf __pycache__ && rm -rf build && rm -rf dist && rm -rf wordgrid.spec"

[project]
name = "WordGrid"
version = "1.0.0"
description = "Word game for the terminal"
authors = [
    {name = "Chris Read", email = "centurix@gmail.com"},
]
dependencies = [
    "click>=8.1.3",
    "pyinstaller>=4.5.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
